--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+    <link rel="stylesheet" href="normalize.css">
     <title>KMA</title>
     <link rel="stylesheet" href="index.css">
   </head>
