--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,11 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site"
     />
     <link rel="stylesheet" href="normalize.css">
     <title>KMA</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="../src/components/img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     
